# aiod-enhanced-interaction

./: .dockerignore  .env.app.sample  .env.sample  .env.template.j2  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.cpu.template.j2  Dockerfile.gpu  Dockerfile.gpu.template.j2  Dockerfile.migrate_api_v2  Dockerfile.populate  Dockerfile.temp  Dockerfile.template.j2  README-PR.md  README.md  deploy.sh  deploy_temp.sh  docker-compose.build.yml  docker-compose.celery.yml  docker-compose.deps.yml  docker-compose.migrate_api_v2.yml  docker-compose.milvus.yml  docker-compose.mongo.yml  docker-compose.populate.yml  docker-compose.populate_lite.yml  docker-compose.temp.yml  docker-compose.template.j2  docker-compose.yml  example.ipynb  helper_script.py  helper_script_2.py  metadata.txt  pyproject.toml  pyproject_temp.toml  requirements.txt  retrieval_evaluation.ipynb  test.ipynb  testing_self-query.ipynb  (+1 more)
.github/: dependabot.yaml
.github/workflows/: pre-commit-checks.yaml
api/: .env.app.sample  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.build  Dockerfile.build-compose  Dockerfile.gpu  Dockerfile.populate  Dockerfile.template  Dockerfile.template.j2  README.md  deploy.sh  docker-compose.build-compose.yml  docker-compose.build.yml  docker-compose.final.yml  docker-compose.gpu.yml  docker-compose.milvus.yml  docker-compose.ollama.yml  docker-compose.populate.yml  docker-compose.standalone.yml  docker-compose.template.j2  docker-compose.template.yml  docker-compose.yml  milvus.yaml  populate-db.sh  requirements-dev.txt  requirements-populate.txt  requirements.txt
api/app/: config.py  helper.py  main.py
api/data/: valid_metadata_values.json
api/scripts/: build_compose.py  milvus_credentials_setup.py  populate_milvus.py
app/: celery_app.py  config.py  logging.py  main.py
app/celery_tasks/: __init__.py
app/chatbot/: chatbot_endpoint.py  chatbot_main.py  chatbot_main_mistral.py  prompt_library.py  website_scraper.py
app/data/: field_valid_values.json  milvus_metadata_fields.json
app/models/: __init__.py  asset_collection.py  asset_for_metadata_extraction.py  db_entity.py  filter.py  mongo.py  query.py
app/routers/: __init__.py  chatbot_endpoint.py  filtered_sem_search.py  recommender_search.py  sem_search.py  simple_sem_search.py
app/schemas/: asset_id.py  chatbot.py  enums.py  params.py  query.py  search_results.py
app/services/: aiod.py  database.py  embedding_store.py  helper.py  mongo.py  recommender.py  resilience.py  taxonomies.py
app_temp/: config.py  main.py
app_temp/job/: asset_crawl.py
app_temp/models/: asset_collection.py  asset_for_metadata_extraction.py  mongo.py
helm/: minikube-cmd.txt
k8s/: backend-configmap.yaml  backend-deployment.yaml  backend-model-pvc.yaml  backend-secrets.yaml  backend-service.yaml  cronjob-example.yaml  job-example.yaml  mongodb-service.yaml  mongodb-statefulset.yaml  ollama-deployment.yaml  secrets.yaml
scripts/: build_compose.py  milvus_credentials_setup.py  mongo_helper_scripts.txt  populate-db.sh  populate_milvus.py  requirements-populate.txt
src/: compute_embeddings.py  data_types.py  dataset.py  embed.py  embedding_stores.py  extract_test.py  lang_chains.py  llm_metadata_filter.py  run_evaluation.py  setup.py  test_extract_from_assets.py  utils.py
(+188 files in other folders)
