[project]
name = "aiod_enhanced_interaction"
description = "An Enhanced Asset Search for AI on Demand"
version = "1.0.20250228"
requires-python = ">=3.11"
authors = [
    { name = "Marcel Veselý", email = "marcel.vesely@kinit.sk" },
    { name = "Alexander Brecko", email = "alexander.brecko@kinit.sk" },
    { name = "Andrej Ridzik", email = "andrej.ridzik@kinit.sk" }
]
dependencies = [
    "fastapi==0.112.2",
    "uvicorn==0.30.6",
    "numpy==2.2.3",
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "tqdm==4.67.1",
    "python-dotenv==1.0.1",
    "pymilvus==2.5.4",
    "transformers==4.44.2",
    "sentence-transformers==3.0.1",
    "tinydb==4.8.0",
    "tinydb-serialization==2.1.1",
    "apscheduler==3.10.4",
    "langchain==0.3.7",
    "langchain-community==0.3.5",
    "langchain-core==0.3.15",
    "langchain-ollama==0.2.0",
    "ollama==0.3.3",
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "black==24.8.0",
    "flake8==7.1.1",
    "isort==5.13.2",
    "pre-commit==3.3.3",
    "torch==2.4.0",
]

[tool.ruff]
line-length = 100
exclude = [
    # TODO: Remove once refactored
    "src",
]

[tool.codespell]
ignore-words-list = "checkin"

[tool.ruff.lint]
select = [
    "S",
    "I",
]

[tool.ruff.lint.isort]
known-local-folder = ["api/app"]
